-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.394 2009-01-15 19:49:54 remko Exp $
-----------------------------------------------------------------------------------------
2009-01-15	remko
	* pslib.c:		Fixed minor bug in ps_polygon (missing P in some cases)

2009-01-14	pwessel
	* pslib.c:		Adherence to ancient PS Level 1 caused trouble with max path
				length.  Now moving to PS Level 2; if anyone has printers from
				the 1950ies pls just use GhostScript.  Specifically, this fixes
				problems with dashed lines within long clip paths (e.g., circular
				map boundaries).
2009-01-14	remko
	* gmt_init.c:		Fixed some errors in descriptions of -J option
	* explain_-J_short.txt:	---"---

2009-01-12	jluis
	* gmt_plot.c:		Example 8 was crashing with Intel compiled binaries because the
				fno variable in GMT_epsinfo was declared to 5 elements but in cases
				like example08 a fno[5] address is inquired.

2009-01-12	remko
	* grdview.c:		Made outline part of paint_it(). Significantly shortens PS file
				when plotting mesh.
	* pslib.[ch]:		Significantly simplified the PostScript specification of symbols.
				ps_setfill introduced to set symbol fill and outline.
				Bug fix in ps_bitimage_cmap(): uncolored (B/W) 1-bit images caused
				errors in ghostscript when the pen color was not black; now plots
				using /DeviceGray.
	* gmt_plot.c:		---"---

2009-01-11	pwessel
	* gmt_custom_symbols.conf:	Removed the standard symbols from this list but kept
				the actual custom *.def files for backwards compatibility.

2009-01-11	remko
	* gmt_custom_symbols.conf:	Replaced all "Like -S.. but fillable with pattern" by
				"Same as -S..", since all these symbols are already fillable
	* PSL_prologue.ps:	New implementation of cross (was actually a plus). Introduced
				plus sign. Both are positioned now on the center of the symbol.
	* pslib.[ch]:		Renamed ps_cross to ps_plus. Implemented new ps_cross.